@@ -283,16 +283,18 @@ elseif (isset($_REQUEST['add_operation']) && isset($_REQUEST['new_operation'])) 
 		}
 
 		if ($result) {
+			$eventsource = getRequest('eventsource',
+				CProfile::get('web.actionconf.eventsource', EVENT_SOURCE_TRIGGERS)
+			);
+
 			if (isset($new_operation['id'])) {
 				$_REQUEST['operations'][$new_operation['id']] = $new_operation;
 			}
 			else {
 				$_REQUEST['operations'][] = $new_operation;
-				$eventsource = getRequest('eventsource',
-					CProfile::get('web.actionconf.eventsource', EVENT_SOURCE_TRIGGERS)
-				);
-				sortOperations($eventsource, $_REQUEST['operations']);
 			}
+
+			sortOperations($eventsource, $_REQUEST['operations']);
 		}
 
 		unset($_REQUEST['new_operation']);
@@ -401,8 +403,6 @@ if (hasRequest('form')) {
 		$data['action']['recovery_msg'] = get_request('recovery_msg', 0);
 		$data['action']['conditions'] = get_request('conditions', array());
 		$data['action']['operations'] = get_request('operations', array());
-
-		sortOperations($data['eventsource'], $data['action']['operations']);
 
 		if ($data['actionid'] && hasRequest('form_refresh')) {
 			$data['action']['def_shortdata'] = get_request('def_shortdata');
